<resources>
    <string name="app_name">IntsabShoping</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Intsab Haider</string>
    <string name="nav_header_subtitle">mintsab@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_listing">Products</string>
    <string name="menu_details">Product Details</string>
    <string name="hot_links">Hot Links</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="categories">Categories</string>
    <string name="all_items">All Items</string>
    <string name="others">Others</string>
    <string name="share">Share</string>
    <string name="term_and_conditions">Term and Conditions</string>
    <string name="contact_us">Contact Us</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="proceed_to_checkout">Proceed To Checkout</string>
    <string name="top_items_of_the_week">Top Items of the Week</string>
    <string name="view_all">View All</string>
    <string name="productimage">productImage</string>
    <string name="loading">Loading..</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="something_went_wrong">Something Went Wrong</string>
    <string name="added_to_cart">Item Added To Cart</string>
    <string name="placeholder_tv_qty">100</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="total_amount_to_pay">Total Amount to Pay</string>
    <string name="number_of_items">Number of Items</string>
    <string name="card_number">Card Number</string>
    <string name="cvc">CVC</string>
    <string name="enter_card_details">Please Enter Card Details</string>
    <string name="you_will_recieve">You will recieve your order within next 18 days, keep in touch with us and read conformation email we have just sent you..</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="payment_successful">Payment Successful</string>
</resources>