<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.intsab.intsabshop.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_details"
        android:name="com.intsab.intsabshop.ui.details.DetailsFragment"
        android:label="@string/menu_details"
        tools:layout="@layout/fragment_listing" />

    <fragment
        android:id="@+id/nav_listing"
        android:name="com.intsab.intsabshop.ui.listing.ListingFragment"
        android:label="@string/menu_listing"
        tools:layout="@layout/fragment_details" />
</navigation>