<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@id/product_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/loading"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/loading"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:maxLines="2"
            android:text="@string/loading"
            android:textColor="@color/primary_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/plusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:gravity="center"
        android:minWidth="30dp"
        android:text="@string/plus"
        android:textColor="#00FF00"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image" />

    <TextView
        android:id="@+id/minusButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:gravity="center"
        android:minWidth="30dp"
        android:text="@string/minus"
        android:textColor="#00FF00"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_qty"
        app:layout_constraintTop_toBottomOf="@+id/product_image" />

    <TextView
        android:id="@+id/tv_qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minWidth="30dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/placeholder_tv_qty"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/plusButton"
        app:layout_constraintTop_toBottomOf="@+id/product_image" />

    <TextView
        android:id="@+id/title_qty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center|end"
        android:minWidth="30dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="Add Quantity"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/minusButton"
        app:layout_constraintEnd_toStartOf="@+id/minusButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_image"
        app:layout_constraintTop_toTopOf="@+id/minusButton" />
</androidx.constraintlayout.widget.ConstraintLayout>